--- a/layouts/shortcodes/activityInsights.html
+++ b/layouts/shortcodes/activityInsights.html
@@ -3,10 +3,10 @@
         <div class="insights-widget-icon">
             <a href="/" target="_blank" aria-label="song thumbnail">
                 <img src="data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt="song thumbnail" aria-label="song thumbnail">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M9 18V5l12-2v13"/><circle cx="6" cy="18" r="3"/><circle cx="18" cy="16" r="3"/>
+                </svg>
             </a>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M9 18V5l12-2v13"/><circle cx="6" cy="18" r="3"/><circle cx="18" cy="16" r="3"/>
-            </svg>
         </div>
         <div class="insights-widget-content">
             <a href="/" target="_blank">No music playing</a>
@@ -16,6 +16,7 @@
     <div class="insights-widget-container">
         <div class="insights-widget-icon">
             <a href="/" target="_blank" aria-label="program thumbnail">
+                <img src="data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt="program thumbnail" aria-label="program thumbnail">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
                 </svg>
@@ -38,14 +39,14 @@
             if (data.listening_to_spotify) {
                 if (spotify_data_track_id != spotify_data.track_id) {
                     widgetContent[0].innerHTML = spotify_data.song;
-                    widgetContent[0].href = "https://open.spotify.com/track/" + spotify_data.track_id;
+                    widgetContent[0].href = `https://open.spotify.com/track/${spotify_data.track_id}`;
                     widgetContent[0].style.pointerEvents = "auto";
                     widgetContent[1].innerHTML = spotify_data.artist.replaceAll(";", ",");
                     document.querySelectorAll(".insights-widget-icon img")[0].src = spotify_data.album_art_url;
                     document.querySelectorAll(".insights-widget-icon img")[0].style.display = "block";
-                    document.querySelectorAll(".insights-widget-icon a")[0].href = "https://open.spotify.com/track/" + spotify_data.track_id;
-                    document.querySelectorAll(".insights-widget-icon a")[0].style.pointerEvents = "auto";
                     document.querySelectorAll(".insights-widget-icon svg")[0].style.display = "none";
+                    document.querySelectorAll(".insights-widget-icon a")[0].href = `https://open.spotify.com/track/${spotify_data.track_id}`;
+                    document.querySelectorAll(".insights-widget-icon a")[0].style.pointerEvents = "auto";
                     spotify_data_track_id = spotify_data.track_id;
                 }
             } else {
@@ -55,22 +56,29 @@
                 widgetContent[1].innerHTML = "&mdash;";
                 document.querySelectorAll(".insights-widget-icon img")[0].src = "data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
                 document.querySelectorAll(".insights-widget-icon img")[0].style.display = "none";
+                document.querySelectorAll(".insights-widget-icon svg")[0].style.display = "block";
                 document.querySelectorAll(".insights-widget-icon a")[0].href = "/";
                 document.querySelectorAll(".insights-widget-icon a")[0].style.pointerEvents = "none";
-                document.querySelectorAll(".insights-widget-icon svg")[0].style.display = "block";
             }
 
             var activities_data = data.activities.filter(function(activity) {
                 return activity.name != "Spotify";
             });
-            var icons = {
-                default: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>`,
-                youtube: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"/><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"/></svg>`,
-                twitch: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 2H3v16h5v4l4-4h5l4-4V2zm-10 9V7m5 4V7"/></svg>`
-            }
             if (activities_data.length > 0) {
                 widgetContent[2].innerHTML = `${["Playing", "Streaming on", "Listening to", "Watching", "Running", "Competing in"][activities_data[0].type]} ${activities_data[0].name}`;
                 widgetContent[3].innerHTML = activities_data[0].details || "&mdash;";
+                var assets = activities_data[0].assets;
+                if (assets) {
+                    if (assets.large_image?.startsWith("twitch:")) {
+                        document.querySelectorAll(".insights-widget-icon img")[1].src = `https://static-cdn.jtvnw.net/previews-ttv/live_user_${assets.large_image.split(":")[1]}-640x640.jpg`;
+                    } else if (assets.large_image?.startsWith("mp:external")) {
+                        document.querySelectorAll(".insights-widget-icon img")[1].src = assets.large_image.replace("mp:external", "https://media.discordapp.net/external/");
+                    } else {
+                        document.querySelectorAll(".insights-widget-icon img")[1].src = `https://cdn.discordapp.com/app-assets/${activities_data[0].application_id}/${assets.small_image ?? assets.large_image}.png`;
+                    }
+                    document.querySelectorAll(".insights-widget-icon img")[1].style.display = "block";
+                    document.querySelectorAll(".insights-widget-icon svg")[1].style.display = "none";
+                }
                 if (activities_data[0].url) {
                     widgetContent[2].href = activities_data[0].url;
                     widgetContent[2].style.pointerEvents = "auto";
@@ -82,15 +90,16 @@
                     document.querySelectorAll(".insights-widget-icon a")[1].href = "/";
                     document.querySelectorAll(".insights-widget-icon a")[1].style.pointerEvents = "none";
                 }
-                document.querySelectorAll(".insights-widget-icon a")[1].innerHTML = icons[activities_data[0].name.toLowerCase()] || icons.default;
             } else {
                 widgetContent[2].innerHTML = "No program running";
-                widgetContent[3].innerHTML = "&mdash;";
                 widgetContent[2].href = "/";
                 widgetContent[2].style.pointerEvents = "none";
+                widgetContent[3].innerHTML = "&mdash;";
+                document.querySelectorAll(".insights-widget-icon img")[1].src = "data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
+                document.querySelectorAll(".insights-widget-icon img")[1].style.display = "none";
+                document.querySelectorAll(".insights-widget-icon svg")[1].style.display = "block";
                 document.querySelectorAll(".insights-widget-icon a")[1].href = "/";
                 document.querySelectorAll(".insights-widget-icon a")[1].style.pointerEvents = "none";
-                document.querySelectorAll(".insights-widget-icon a")[1].innerHTML = icons.default;
             }
         });
         return _;
